# pkmngameengine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  version.h.in
.github/: FUNDING.yml
game/: CMakeLists.txt  animation.cpp  animation.h  battle.cpp  battle.h  defines.h  effect.cpp  effect.h  entity.cpp  entity.h  fps.cpp  fps.h  game.cpp  game.h  gamedata.cpp  gamedata.h  gametime.cpp  gametime.h  inputs.cpp  inputs.h  item.cpp  item.h  itemutils.cpp  itemutils.h  layer.h  main.cpp  map.cpp  map.h  menu.cpp  menu.h  move.cpp  move.h  pkmn.cpp  pkmn.h  pkmnutils.cpp  pkmnutils.h  renderutils.cpp  renderutils.h  scene.cpp  scene.h  (+13 more)
game/animations/: battleintroanimation.cpp  battleintroanimation.h  eyeanimation.cpp  eyeanimation.h  fadeanimation.cpp  fadeanimation.h  introanimation.cpp  introanimation.h  locationanimation.cpp  locationanimation.h  parallelanimation.cpp  parallelanimation.h  sequentialanimation.cpp  sequentialanimation.h  spriteanimation.cpp  spriteanimation.h  textanimation.cpp  textanimation.h
game/animations/map/: dooranimation.cpp  dooranimation.h  fallentranceanimation.cpp  fallentranceanimation.h  fallexitanimation.cpp  fallexitanimation.h  grassanimation.cpp  grassanimation.h  groundanimation.cpp  groundanimation.h  ledgeanimation.cpp  ledgeanimation.h  mapanimation.cpp  mapanimation.h  sandanimation.cpp  sandanimation.h  stairsanimation.cpp  stairsanimation.h  tileanimation.cpp  tileanimation.h  underwatergrassanimation.cpp  underwatergrassanimation.h
game/animations/shake/: shakeanimation.cpp  shakeanimation.h  verticalshakeanimation.cpp  verticalshakeanimation.h
game/animations/weather/: blizzardanimation.cpp  blizzardanimation.h  bubblesanimation.cpp  bubblesanimation.h  flashanimation.cpp  flashanimation.h  foganimation.cpp  foganimation.h  harshsunlightanimation.cpp  harshsunlightanimation.h  rainanimation.cpp  rainanimation.h  sandstormanimation.cpp  sandstormanimation.h  weatheranimation.cpp  weatheranimation.h
game/battles/: battleactions.cpp  battleactions.h  battlebackground.cpp  battlebackground.h  battlespeech.cpp  battlespeech.h  duobattle.cpp  duobattle.h  moveselection.cpp  moveselection.h  singlebattleui.cpp  singlebattleui.h
game/entities/: erasableentity.cpp  erasableentity.h  player.cpp  player.h  pnj.cpp  pnj.h  trainer.cpp  trainer.h
game/resources/: .gitignore  data.json
game/resources/maps/: cave1.pkmap  cave2.pkmap  cave3.pkmap  dive1.pkmap  house1.pkmap  road1.pkmap  road2.pkmap  sea1.pkmap  town1.pkmap
game/scenes/: bagscene.cpp  bagscene.h  battlescene.cpp  battlescene.h  encounterscene.cpp  encounterscene.h  evolutionscene.cpp  evolutionscene.h  introscene.cpp  introscene.h  keyboard.cpp  keyboard.h  keyboardscene.cpp  keyboardscene.h  leavescene.cpp  leavescene.h  mapscene.cpp  mapscene.h  mapscenefactory.cpp  mapscenefactory.h  pkmnsscene.cpp  pkmnsscene.h  titlemenu.cpp  titlemenu.h  titlescene.cpp  titlescene.h  town1scene.cpp  town1scene.h
game/scenes/battle/: battlescene.h  encounterscene.cpp  encounterscene.h  singlebattlescene.cpp  singlebattlescene.h  trainerscene.cpp  trainerscene.h
game/scenes/story/: cave1scene.cpp  cave1scene.h  cave2scene.cpp  cave2scene.h  cave3scene.cpp  cave3scene.h  dive1scene.cpp  dive1scene.h  house1scene.cpp  house1scene.h  road1scene.cpp  road1scene.h  road2scene.cpp  road2scene.h  sea1scene.cpp  sea1scene.h  town1scene.cpp  town1scene.h
game/sprites/: bikesprite.cpp  bikesprite.h  erasablesprite.cpp  erasablesprite.h  squaresprite.cpp  squaresprite.h  surfsprite.cpp  surfsprite.h
game/tiles/: grasstile.cpp  grasstile.h
mapeditor/: CMakeLists.txt  checkablecombobox.cpp  checkablecombobox.h  encounterdialog.cpp  encounterdialog.h  encounterseditor.cpp  encounterseditor.h  encountersmodel.cpp  encountersmodel.h  imageviewer.cpp  imageviewer.h  imagewidget.cpp  imagewidget.h  layersmodel.cpp  layersmodel.h  levelsmodel.cpp  levelsmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mappereditor.cpp  mappereditor.h  mapperviewer.cpp  mapperviewer.h  mapperwidget.cpp  mapperwidget.h
mapeditor/commands/: animatedpropertycommand.h  changecommand.h  changescommand.h  doorpropertycommand.h  mappercommand.cpp  mappercommand.h  parallelcommand.cpp  parallelcommand.h  resetcommand.h
maplibrary/: CMakeLists.txt  encounter.cpp  encounter.h  encountermethod.cpp  encountermethod.h  event.cpp  event.h  layer.h  level.cpp  level.h  map.cpp  map.h  tile.cpp  tile.h
maplibrary/layers/: encounterslayer.cpp  encounterslayer.h  eventlayer.cpp  eventlayer.h  specialtilelayer.cpp  specialtilelayer.h  tilelayer.cpp  tilelayer.h
maplibrary/tiles/: grasstile.cpp  grasstile.h
pkmneditor/: CMakeLists.txt  abilityiddialog.cpp  abilityiddialog.h  abilityidswidget.cpp  abilityidswidget.h  checkablecombobox.cpp  checkablecombobox.h  evolutiondialog.cpp  evolutiondialog.h  evolutionsmodel.cpp  evolutionsmodel.h  evolutionswidget.cpp  evolutionswidget.h  idsselector.cpp  idsselector.h  mainwindow.cpp  mainwindow.h  movestolearnmodel.cpp  movestolearnmodel.h  movestolearnwidget.cpp  movestolearnwidget.h  movetolearndialog.cpp  movetolearndialog.h  objectlistmodel.cpp  objectlistmodel.h  restrictedidcombobox.cpp  restrictedidcombobox.h  statswidget.cpp  statswidget.h  typesview.cpp  typesview.h  typewidget.cpp  typewidget.h
pkmneditor/editors/: abilitiesview.cpp  abilitiesview.h  abilitywidget.cpp  abilitywidget.h  itemsview.cpp  itemsview.h  itemswidget.cpp  itemswidget.h  movesview.cpp  movesview.h  movewidget.cpp  movewidget.h  pkmnsview.cpp  pkmnsview.h  pkmnwidget.cpp  pkmnwidget.h  typesview.cpp  typesview.h  typewidget.cpp  typewidget.h
pkmnlibrary/: CMakeLists.txt  ability.cpp  ability.h  itemdef.cpp  itemdef.h  movedef.cpp  movedef.h  pkmn.cpp  pkmn.h  pkmndef.cpp  pkmndef.h  type.cpp  type.h
